--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	},
 	"main": "build/index.js",
 	"devDependencies": {
-		"@wordpress/scripts": "^21.0.1"
+		"@wordpress/scripts": "26.6.0"
 	},
 	"scripts": {
 		"build": "wp-scripts build",
